--- a/Tarea-1.ipynb
+++ b/Tarea-1.ipynb
@@ -228,11 +228,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9f5db173",
+   "cell_type": "markdown",
+   "id": "69f83ceb",
    "metadata": {},
-   "outputs": [],
    "source": [
     "Imprimimos las estandarizaciones manual y automática respectivamente:"
    ]
@@ -324,12 +322,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3c0d6f1d",
+   "cell_type": "markdown",
+   "id": "68003780",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Se puede apreciar que en ambas ocasiones los resultados dan lo mismo, por lo que el método manual es efectivo."
+   ]
   }
  ],
  "metadata": {
