--- a/Tarea-4.ipynb
+++ b/Tarea-4.ipynb
@@ -88,7 +88,7 @@
         "#Esta línea se utiliza para evitar algunas advertencias que panda tiene\n",
         "pd.options.mode.chained_assignment = None  # default='warn'"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -117,7 +117,7 @@
         "ecommerce = pd.read_csv(archivo,error_bad_lines=False)\n",
         "ecommerce.head(10)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -514,7 +514,7 @@
         "ecommerce.drop(porEliminar, axis=1, errors='ignore', inplace=True)\n",
         "ecommerce.head(9)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -762,7 +762,7 @@
         "    ecommerce[label] = np.where(ecommerce[\"country\"]==label,1,0)\n",
         "ecommerce[[\"country\"]+top_10].head(10)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -990,7 +990,7 @@
         "\n",
         "ecommerce_procesado"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1446,7 +1446,7 @@
         "#Se remueven las columnas\n",
         "ecommerce_procesado.drop(porEliminar, axis=1, errors='ignore', inplace=True)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1470,7 +1470,7 @@
       "source": [
         "ecommerce_procesado.dtypes"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1531,7 +1531,7 @@
       "source": [
         "ecommerce_procesado.isna().sum()"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1597,7 +1597,7 @@
         "plt.xticks(rotation=90)\n",
         "plt.show"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1653,12 +1653,12 @@
         "X = ecommerce_procesado.drop(columns='Indicador')\n",
         "y = ecommerce_procesado['Indicador']\n",
         "\n",
-        "# One-hot encoding the y\n",
+        "# One-hot encoding la y\n",
         "y_procesado = pd.get_dummies(y, columns=['Indicador'])\n",
         "\n",
         "y_procesado.head(4000)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1803,7 +1803,7 @@
         "print(\"Forma de X:\", X_nuevo.shape)\n",
         "print(\"\\nForma de y:\", y_nuevo.shape)\n"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1833,7 +1833,7 @@
       "source": [
         "X_train, X_test, y_train, y_test = train_test_split(X_nuevo, y_nuevo, train_size= 0.7, random_state = 1234, shuffle = True)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1852,7 +1852,7 @@
         "print(y_test.shape)\n",
         "print(X_test.shape)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1890,7 +1890,7 @@
         "from keras.utils import np_utils\n",
         "from keras.wrappers.scikit_learn import KerasClassifier\n"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1924,12 +1924,12 @@
         "model.add(Dense(2))\n",
         "model.add(Activation('sigmoid'))\n",
         "\n",
-        "# Compiling the model\n",
+        "# Compilando el modelo\n",
         "model.compile(loss = 'categorical_crossentropy', optimizer='Adagrad', metrics=['accuracy'])\n",
         "\n",
         "model.summary()"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1981,7 +1981,7 @@
         "\n",
         "model.fit(X_train, y_train, epochs=100, batch_size=40, verbose=0)\n"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2019,7 +2019,7 @@
         "score = model.evaluate(X_test, y_test)\n",
         "print(\"\\n Testing Accuracy:\", score[1])"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2588,7 +2588,7 @@
         "id": "PXJVZAHlBvCF"
       },
       "source": [
-        "# Definimos los parámetroa a ajustar\n",
+        "# Definimos los parámetros a ajustar\n",
         "optimizer = ['SGD' , 'Adadelta', 'RMSprop', 'Adagrad', 'Adam']\n",
         "parameter_grid = dict(optimizer=optimizer)"
       ],
@@ -3077,12 +3077,12 @@
         "modelo.add(Dense(2))\n",
         "modelo.add(Activation('sigmoid'))\n",
         "\n",
-        "# Compiling the model\n",
+        "# Compilando el modelo\n",
         "modelo.compile(loss = 'binary_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
         "\n",
         "modelo.summary()"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3132,7 +3132,7 @@
         "\n",
         "modelo.fit(X_train, y_train, epochs=200, batch_size=80, verbose=0)\n"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3171,7 +3171,7 @@
         "score = modelo.evaluate(X_test, y_test)\n",
         "print(\"\\n Testing Accuracy:\", score[1])"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3233,7 +3233,7 @@
         "\n",
         "plt.show() \n"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3281,7 +3281,7 @@
         "print(\"Cantidad de buenos usuarios: \",buenos_usuarios.shape[0])\n",
         "print(\"Cantidad de malos usuarios: \",malos_usuarios.shape[0])"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3310,7 +3310,7 @@
       "source": [
         "malos_usuarios_filtrado = malos_usuarios.head(6893)"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3330,7 +3330,7 @@
       "source": [
         "ecommerce_nuevo = pd.concat([buenos_usuarios,malos_usuarios_filtrado])"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3352,7 +3352,7 @@
         "\n",
         "ecommerce_revuelto = shuffle(ecommerce_nuevo)"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3382,7 +3382,7 @@
         "y_revuelto = pd.get_dummies(y, columns=['Indicador'])\n",
         "y_revuelto.head(20)"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3554,7 +3554,7 @@
         "X_escalado = escalado.fit_transform(X)\n",
         "X_escalado = pd.DataFrame(data = X_escalado, columns = X.columns)"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3583,7 +3583,7 @@
         "print(\"Forma de X:\", X_nuevo.shape)\n",
         "print(\"\\nForma de y:\", y_nuevo.shape)\n"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3613,7 +3613,7 @@
       "source": [
         "X_train, X_test, y_train, y_test = train_test_split(X_nuevo, y_nuevo, train_size= 0.7, random_state = 1234, shuffle = True)"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3642,12 +3642,12 @@
         "modelo.add(Dense(2))\n",
         "modelo.add(Activation('sigmoid'))\n",
         "\n",
-        "# Compiling the model\n",
+        "# Compilando el modelo\n",
         "modelo.compile(loss = 'binary_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
         "\n",
         "modelo.summary()"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3686,7 +3686,7 @@
         "# Se entrena el modelo\n",
         "modelo.fit(X_train, y_train, epochs=200, batch_size=80, verbose=0)"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3725,7 +3725,7 @@
         "score = modelo.evaluate(X_test, y_test)\n",
         "print(\"\\n Testing Accuracy:\", score[1])"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
